HW4 -- UPD - social links size and gap corrections, transition for the common link styling removed

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,6 @@ a:visited {
   letter-spacing: 0.04em;
   color: var(--slate);
   text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 a:hover,
@@ -527,17 +526,11 @@ header {
   max-width: 264px;
 }
 
-.footer-social-media p {
-  margin-bottom: 16px;
-  color: var(--white);
-  font-weight: 500;
-}
-
 /* SOCIAL MEDIA ICONS */
 
 .social-media-container {
   display: flex;
-  gap: 16px;
+  gap: 24px;
 }
 
 .social-media-link-wrapper {
@@ -573,12 +566,22 @@ header {
   background-color: var(--ocean);
 }
 
+.footer-social-media p {
+  margin-bottom: 16px;
+  color: var(--white);
+  font-weight: 500;
+}
+
+.footer-social-media .social-media-container {
+  gap: 16px;
+}
+
+.footer-social-media .social-media-link .icon {
+  width: 24px;
+  height: 24px;
+}
+
 .footer-social-media .social-media-link:hover,
 .footer-social-media .social-media-link:focus {
   background-color: var(--green);
-}
-
-.icon {
-  width: 24px;
-  height: 24px;
 }
